tests/tooling/fixtures/native/recovery/negative/negative_misplaced_qualifier_message_selector_head_pure.objc3
// Negative fixture: declaration qualifiers are invalid in message selector positions.
// Expected diagnostic code(s): O3P100.
module NegativeMisplacedQualifierMessageSelectorHeadPure;

fn main() -> i32 {
  let receiver = 1;
  return [receiver pure];
}